supprission d un patient

--- a/templates/manage_patients.html
+++ b/templates/manage_patients.html
@@ -744,6 +744,8 @@
 </div>
 
 <script src="{{ url_for('static', filename='js/manage_patients.js') }}"></script>
+<script src="{{ url_for('static', filename='js/delete_confirmation.js') }}"></script>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/manage_patients.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/delete_confirmation.css') }}">
 {% endblock %}
